# CircuitPython_ST7567S_I2C

./: README.rst  circuitpython_st7567s_i2c.py  pyproject.toml
examples/: st7567s_simpletest.py
