# SPDX-FileCopyrightText: 2022 Alec Delaney for Adafruit Industries
# SPDX-FileCopyrightText: 2024 Danct12
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-st7567s-i2c"
description = "CircuitPython display control library for devices using the ST7567S graphic display driver IC."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Danct12", email = "danct12@disroot.org"}
]
urls = {Homepage = "https://github.com/adafruit/Adafruit_CircuitPython_ST7565"}
keywords = [
    "display",
    "st7567s",
    "monochrome",
    "displays",
    "hardware",
    "micropython",
    "circuitpython",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["circuitpython_st7567s_i2c"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
